--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == README
 
-Launch Academy Ruby on Rails code-along featuring TDD and oauth.
+Launch Academy Ruby on Rails code-along featuring TDD and Devise.
